# route/auth_routes.js
@@ -1,6 +1,9 @@
 const auth_routes = require("express").Router();
 const { loginReq, logOutReq } = require("../controller/userController");
-const { loginValidator, taskValidator } = require("../middleware/validation");
+const { taskValidator } = require("../middleware/validation");
+
+// Autherization Middleware
+const { verifyJWT } = require("../middleware/validation");
 
 
 const {
@@ -22,50 +25,39 @@ const {
 
 
 
-// ##### User Credentials Routes #############
-auth_routes.get("/auth/profile", (req, res) => {
-    return res.status(200).send(req.user);
-})
-
-auth_routes.post("/login",
-    loginValidator,
-    loginReq
-);
-
-
-auth_routes.get("/auth/logout", logOutReq);
+auth_routes.use(verifyJWT);
 
 // ##### Task Routes #############
 
-auth_routes.get("/auth/showtask",
+auth_routes.get("/showall",
     // showTaskCache,
     showTask);
 
-auth_routes.post("/auth/createtask",
+auth_routes.post("/createnew",
     taskValidator,
     createTask
 );
 
-auth_routes.get("/auth/task/:id",
+auth_routes.get("/pending",
+    // getPendingTaskCache,
+    getPendingTask);
+
+auth_routes.get("/complete",
+    // getCompletedTaskCache,
+    getCompletedTask);
+
+auth_routes.get("/:id",
     // taskWithIdCache,
     taskWithId);
 
 
-auth_routes.get("/auth/pendingtask",
-    // getPendingTaskCache,
-    getPendingTask);
-
-auth_routes.get("/auth/completedtask",
-    // getCompletedTaskCache,
-    getCompletedTask);
-
-auth_routes.put("/auth/update/:id",
+auth_routes.put("/:id",
     taskValidator,
     updateTask
 );
 
 
-auth_routes.delete("/auth/delete/:id", deleteTask);
+auth_routes.delete("/:id", deleteTask);
 
 
 module.exports = auth_routes;
