# route/public_routes.js
@@ -1,6 +1,11 @@
 const public_routes = require("express").Router();
-const { regReq, forgetPassword, resetPassword} = require("../controller/userController");
-const { regValidator } = require("../middleware/validation");
+const { regReq, loginReq, logOutReq, forgetPassword, resetPassword } = require("../controller/userController");
+const { regValidator, loginValidator } = require("../middleware/validation");
+
+
+
+// Autherization Middleware
+const { verifyJWT } = require("../middleware/validation");
 
 
 public_routes.get("/", (req, res) => {
@@ -13,8 +18,30 @@ public_routes.post("/register",
     regReq);
 
 
-public_routes.post("/forget-password", forgetPassword);
+public_routes.post("/forget-password",
+    forgetPassword);
 
-public_routes.post("/reset-password/:token", resetPassword);
+public_routes.post("/reset-password/:token",
+    resetPassword);
+
+public_routes.post("/login",
+    loginValidator,
+    loginReq
+);
+
+//  All the below must be verified by token 
+public_routes.use(verifyJWT);
+
+
+// ##### User Credentials Routes #############
+public_routes.get("/profile",
+    (req, res) => {
+        return res.status(200).send(req.session.autherization["user"]);
+    })
+
+
+public_routes.get("/logout",
+    logOutReq);
+
 
 module.exports = public_routes;
